--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
 <h1>{{title}}</h1>
 
 {{#if user}}
-<p>Welcome to Google oAuth <a href="{{user._json.url}}" target=_blank>{{user.displayName}}</a></p>
+<p>Welcome to Google oAuth <a href="{{user.url}}" target=_blank>{{user.displayName}}</a></p>
 <h3>Here are some things that I know about you:</h3>
 <ul>
   <li>You are {{user.gender}}</li>
-  <li>And here's your picture: <img src="{{user._json.image.url}}" alt="{{user.displayName}}'s picture'" /></li>
+  <li>And here's your picture: <img src="{{user.profileImageURL}}" alt="{{user.displayName}}'s picture'" /></li>
   <li>
     And here are a bunch of your pictures:
     <ul>
